--- a/template/package.json
+++ b/template/package.json
@@ -11,10 +11,13 @@
     "vue": "^2.0.0-beta.1"
   },
   "devDependencies": {
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.10.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.4",
     "vue-loader": "^9.0.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "xhr": "^2.2.1"
   }
 }
